implementasi Category Specialist
